--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,13 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Peter Grillot - Web Developer
+email: petergrillot@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  I am a Full Stack Dev with a focus on modern Javascript frameworks. I love coding, learning and playing music. I am from Washington, D.C
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://petergrillot.github.io" # the base hostname & protocol for your site
+github_username:  petergrillot
 
 # Build settings
 markdown: kramdown
